--- a/Services/ECommerce.Identidade.API/appsettings.Development.json
+++ b/Services/ECommerce.Identidade.API/appsettings.Development.json
@@ -1,10 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "ConnectionStrings": {
+    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=ECommerce;Trusted_Connection=True;"
   },
   "AppSettings": {
     "Secret": "839486aa-06ff-4885-9a66-1b4d66f36feb",
