melhoria boas práticas

--- a/Services/ECommerce.Identidade.API/appsettings.Development.json
+++ b/Services/ECommerce.Identidade.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=ECommerce;Trusted_Connection=True;"
+    "Default": "Server=localhost,1433;Database=ECommerce;User=sa;Password=frigi3ri;"
   },
   "AppSettings": {
     "Secret": "839486aa-06ff-4885-9a66-1b4d66f36feb",
