--- a/Web/ECommerce.WebApp.MVC/appsettings.Development.json
+++ b/Web/ECommerce.WebApp.MVC/appsettings.Development.json
@@ -1,4 +1,6 @@
 {
+  "AutenticacaoUrl": "http://localhost:54560",
+  "CatalogoUrl": "http://localhost:54561",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
