--- a/Services/ECommerce.Identidade.API/appsettings.json
+++ b/Services/ECommerce.Identidade.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=ECommerce;Trusted_Connection=True;"
+    "Default": "Server=localhost,1433;Database=ECommerce;User=sa;Password=frigi3ri;"
   },
   "Logging": {
     "LogLevel": {
