--- a/Services/ECommerce.Identidade.API/ECommerce.Identidade.API.csproj
+++ b/Services/ECommerce.Identidade.API/ECommerce.Identidade.API.csproj
@@ -21,5 +21,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.3.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\ECommerce.API.Core\ECommerce.API.Core.csproj" />
+  </ItemGroup>
+
 
 </Project>
