--- a/Services/ECommerce.Identidade.API/appsettings.Development.json
+++ b/Services/ECommerce.Identidade.API/appsettings.Development.json
@@ -3,9 +3,10 @@
     "Default": "Data Source=(localdb)\\Mssqllocaldb;Initial Catalog=ECommerce;Integrated Security=True"
   },
   "AppSettings": {
-    "Secret": "839486aa-06ff-4885-9a66-1b4d66f36feb",
+    "Secret": "MEUSEGREDOTODOPODEROSO",
     "ExpiracaoHoras": 2,
-    "Emissor": "ECommerce",
+    "Emissor": "ECommerceV1",
     "ValidoEm": "https://localhost"
   }
+
 }
