--- a/Services/ECommerce.Catalogo.API/appsettings.Development.json
+++ b/Services/ECommerce.Catalogo.API/appsettings.Development.json
@@ -1,11 +1,12 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=localhost,1433;Database=ECommerce;User=sa;Password=frigi3ri;"
+    "Default": "Data Source=(localdb)\\Mssqllocaldb;Initial Catalog=ECommerce;Integrated Security=True"
   },
   "AppSettings": {
-    "Secret": "839486aa-06ff-4885-9a66-1b4d66f36feb",
+    "Secret": "MEUSEGREDOTODOPODEROSO",
     "ExpiracaoHoras": 2,
-    "Emissor": "ECommerce",
+    "Emissor": "ECommerceV1",
     "ValidoEm": "https://localhost"
   }
+
 }
