--- a/Services/ECommerce.Catalogo.API/appsettings.json
+++ b/Services/ECommerce.Catalogo.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=localhost,1433;Database=ECommerce;User=sa;Password=frigi3ri;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
