Implementar validação de regra via claims

--- a/Services/ECommerce.Identidade.API/ECommerce.Identidade.API.csproj
+++ b/Services/ECommerce.Identidade.API/ECommerce.Identidade.API.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\ECommerce.API.Core\ECommerce.API.Core.csproj" />
+    <ProjectReference Include="..\..\Building Blocks\ECommerce.API.Core\ECommerce.API.Core.csproj" />
   </ItemGroup>
 
 
