--- a/Services/ECommerce.Catalogo.API/Properties/launchSettings.json
+++ b/Services/ECommerce.Catalogo.API/Properties/launchSettings.json
@@ -16,6 +16,13 @@
       "sqlDebugging": true,
       "nativeDebugging": true,
       "applicationUrl": "http://localhost:50364"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
