adicionado polly padrão

--- a/Services/ECommerce.Catalogo.API/ECommerce.Catalogo.API.csproj
+++ b/Services/ECommerce.Catalogo.API/ECommerce.Catalogo.API.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <UserSecretsId>f6defe0f-ef4b-4bb0-a140-432446607018</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'SelfHosting' " />
