--- a/Web/ECommerce.WebApp.MVC/ECommerce.WebApp.MVC.csproj
+++ b/Web/ECommerce.WebApp.MVC/ECommerce.WebApp.MVC.csproj
@@ -3,11 +3,14 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <UserSecretsId>be8fd908-ba77-4912-bb72-2d5416dc5b0a</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.3" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.13" />
+    <PackageReference Include="Refit" Version="6.0.38" />
   </ItemGroup>
 
   <ItemGroup>
