--- a/Web/ECommerce.WebApp.MVC/appsettings.Development.json
+++ b/Web/ECommerce.WebApp.MVC/appsettings.Development.json
@@ -1,7 +1,8 @@
 {
   "AutenticacaoUrl": "http://localhost:54560",
   "CatalogoUrl": "http://localhost:50364",
-  "Logging": {
+  "ClienteUrl": "http://localhost:50365",
+"Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
