--- a/Services/ECommerce.Cliente.API/appsettings.Development.json
+++ b/Services/ECommerce.Cliente.API/appsettings.Development.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\Mssqllocaldb;Initial Catalog=ECommerce;Integrated Security=True"
+  },
+  "AppSettings": {
+    "Secret": "MEUSEGREDOTODOPODEROSO",
+    "ExpiracaoHoras": 2,
+    "Emissor": "ECommerceV1",
+    "ValidoEm": "https://localhost"
   }
+
 }
