--- a/Services/ECommerce.Cliente.API/appsettings.Development.json
+++ b/Services/ECommerce.Cliente.API/appsettings.Development.json
@@ -7,6 +7,8 @@
     "ExpiracaoHoras": 2,
     "Emissor": "ECommerceV1",
     "ValidoEm": "https://localhost"
+  },
+  "MessageQueueConnection": {
+    "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
   }
-
 }
