--- a/Services/ECommerce.Cliente.API/ECommerce.Cliente.API.csproj
+++ b/Services/ECommerce.Cliente.API/ECommerce.Cliente.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -18,12 +18,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Configuration\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\..\Building Blocks\ECommerce.API.Core\ECommerce.API.Core.csproj" />
     <ProjectReference Include="..\..\Building Blocks\ECommerce.BuildingBlocks.Core\ECommerce.Core.csproj" />
+    <ProjectReference Include="..\..\Building Blocks\MessageBus\MessageBus.csproj" />
   </ItemGroup>
 
 
